--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "fetch": "^1.1.0",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.6",
     "fs": "^0.0.1-security",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
