--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/supabase-js": "^2.50.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "fetch": "^1.1.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.6",
@@ -26,8 +28,8 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1"
   },
