--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.23.6",
     "fs": "^0.0.1-security",
     "jspdf": "^3.0.1",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "node-fetch": "^3.3.2",
