--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "resend": "^4.7.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
